--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -6,4 +6,4 @@
       = f.input :password_confirmation
 
     .box-footer
-      = f.button :submit, classL %w[btn btn-primary]
+      = f.button :submit, class: %w[btn btn-primary]
