--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,11 @@ html
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
   body
+    - if logged_in?
+      = render 'shared/header'
+    - else
+      = render 'shared/before_login_header'
     = yield
+
 
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
