Add: authenticationsファイルの追加

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,5 +1,5 @@
 .box.box-primary
-  = simple_form_for [@user] do |f|
+  = simple_form_for @user do |f|
     .box-body
       = f.input :email
       = f.input :password
