Add: usersテーブルに必要なカラムを追加

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -1,1 +1,5 @@
 = link_to 'Login', login_path
+p
+= link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter)
+p
+= link_to 'Register', new_user_path
