Add: ユーザー登録のバリデーションを追加

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,6 +1,7 @@
 .box.box-primary
   = simple_form_for @user do |f|
     .box-body
+      = f.input :name
       = f.input :email
       = f.input :password
       = f.input :password_confirmation
