Add: googleログインの設定

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -2,4 +2,6 @@
 p
 = link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter)
 p
+= link_to 'Login with Google', auth_at_provider_path(:provider => :google)
+p
 = link_to 'Register', new_user_path
