--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
       = render 'shared/header'
     - else
       = render 'shared/before_login_header'
+    = render 'shared/flash_message'
     = yield
 
 
