Fix: viewsを日本語化

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -1,7 +1,7 @@
-= link_to 'Login', login_path
+= link_to t('defaults.login'), login_path
 p
 = link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter)
 p
 = link_to 'Login with Google', auth_at_provider_path(:provider => :google)
 p
-= link_to 'Register', new_user_path
+= link_to t('defaults.register'), new_user_path
