--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,3 +1,3 @@
 = current_user.name
 p
-= link_to 'Logout', logout_path, method: :delete
+= link_to t('defaults.logout'), logout_path, method: :delete
