Fix: 見出しをローマ字表示

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -2,28 +2,28 @@ h1
   | Top#index
 p
 h3
-  新着
+  = 'New'
 .row
   .col-12
     .row
       = render @posts
 p
 h3
-  エンジニアのデスク
+  = 'Engineer'
 .row
   .col-12
     .row
       = render @engineer_posts
 p
 h3
-  ゲーマーのデスク
+  = 'Gamer'
 .row
   .col-12
     .row
       = render @gamer_posts
 p
 h3
-  動画クリエイターのデスク
+  = 'VideoCreater'
 .row
   .col-12
     .row
