--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -2,28 +2,28 @@ h1
   | Top#index
 p
 h3
-  = 'New'
+  = t('.New Arrival')
 .row
   .col-12
     .row
       = render @posts
 p
 h3
-  = 'Engineer'
+  = t('defaults.Engineer')
 .row
   .col-12
     .row
       = render @engineer_posts
 p
 h3
-  = 'Gamer'
+  = t('defaults.Gamer')
 .row
   .col-12
     .row
       = render @gamer_posts
 p
 h3
-  = 'Video Creater'
+  = t('defaults.Video Creator')
 .row
   .col-12
     .row
