Add: i18nで日時のフォーマット設定

--- a/app/views/post_categories/_post_category.html.slim
+++ b/app/views/post_categories/_post_category.html.slim
@@ -7,4 +7,4 @@
       .li.list-inline-item
         = post_category.post.user.name
       .li.list-inline-item
-        = l post_category.post.created_at
+        = l post_category.post.created_at, format: :short
