--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -7,4 +7,4 @@
       .li.list-inline-item
         = post.user.name
       .li.list-inline-item
-        = l post.created_at
+        = l post.created_at, format: :short
