--- a/app/views/post_categories/_post_category.html.slim
+++ b/app/views/post_categories/_post_category.html.slim
@@ -1,5 +1,5 @@
 .col-sm-12.col-lg-4.mb-3
-  //- content_tag 'div', id: "post-id-#{post.id]}"
+  div id="post-id-#{post_category.post.id}"
   .card
     = image_tag '20210209_020213.jpg', class: 'card-img-top', size: '300x200'
     .card-body
