--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,10 +1,10 @@
 .col-sm-12.col-lg-4.mb-3
-  //- content_tag 'div', id: "post-id-#{post.id]}"
-  .card
-    = image_tag '20210209_020213.jpg', class: 'card-img-top', size: '300x200'
-    .card-body
-    .ul.list-inline
-      .li.list-inline-item
-        = post.user.name
-      .li.list-inline-item
-        = l post.created_at, format: :short
+  div id="post-id-#{post.id}"
+    .card
+      = image_tag '20210209_020213.jpg', class: 'card-img-top', size: '300x200'
+      .card-body
+      .ul.list-inline
+        .li.list-inline-item
+          = post.user.name
+        .li.list-inline-item
+          = l post.created_at, format: :short
