Fix: writerとvideocreatorの変数を訂正

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -23,7 +23,7 @@ h3
   .row
     .col-12
       .row
-        = render @gamer_posts
+        = render @writer_posts
 p
 h3
   = t('defaults.Video Creator')
