Add: カテゴリーページのログインスキップ設定

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -16,6 +16,7 @@ h3
     .col-12
       .row
         = render @engineer_posts
+  /= link_to t('.engineers desk'), category_path()
 p
 h3
   = t('defaults.Writer')
