Add: ヘッダーにTop戻るボタン

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -1,7 +1,12 @@
-= link_to t('defaults.login'), login_path
+= link_to t('DeskTour'), root_path
 p
-= link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter)
-p
-= link_to 'Login with Google', auth_at_provider_path(:provider => :google)
-p
-= link_to t('defaults.register'), new_user_path
+.container
+  .row
+    .col-md-2
+      = link_to t('defaults.login'), login_path
+    .col-md-2
+      = link_to 'Login with Twitter', auth_at_provider_path(:provider => :twitter)
+    .col-md-2
+      = link_to 'Login with Google', auth_at_provider_path(:provider => :google)
+    .col-md-2
+      = link_to t('defaults.register'), new_user_path
