Remove: set_category

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -17,7 +17,7 @@ h3
     .col-12
       .row
         = render @engineer_posts
-= link_to t('.show more'), category_path('engineer')
+= link_to t('.show more'), category_path('Engineer')
 p
 h3
   = t('category.Writer')
@@ -26,7 +26,7 @@ h3
     .col-12
       .row
         = render @writer_posts
-= link_to t('.show more'), category_path('writer')
+= link_to t('.show more'), category_path('Writer')
 p
 h3
   = t('category.Media Creator')
@@ -35,4 +35,4 @@ h3
     .col-12
       .row
         = render @creator_posts
-= link_to t('.show more'), category_path('media creator')
+= link_to t('.show more'), category_path('MediaCreator')
