--- a/app/views/post_categories/_post_category.html.slim
+++ b/app/views/post_categories/_post_category.html.slim
@@ -2,3 +2,8 @@
   div id="post-id-#{post_category.post.id}"
     .card
       = image_tag '20210226_233834.jpg', class: 'card-img-top', size: '300x200'
+      ul class='list-inline'
+        li class='list-inline-item'
+          = post_category.post.user.name
+        li class='list-inline-item'
+          = l post_category.post.created_at, format: :short
