--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -2,3 +2,8 @@
   div id="post-id-#{post.id}"
     .card
       = image_tag '20210209_020213.jpg', class: 'card-img-top', size: '300x200'
+      ul class='list-inline'
+        li class='list-inline-item'
+          = post.user.name
+        li class='list-inline-item'
+          = l post.created_at, format: :short
