--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,10 +1,9 @@
+= link_to t('DeskTour'), root_path
+p
 .container
   .row
     .col-md-2
       = current_user.name
-p
-.container
-  .row
     .col-md-2
       = link_to '新規投稿', new_post_path
     .col-md-2
