Add: ボタンの文字を変更

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,4 +5,4 @@
       = f.association :categories, as: :check_boxes
 
     .box-footer
-    = f.button :submit, class: %w[btn btn-primary]
+    = f.button :submit, '投稿する', class: %w[btn btn-primary]
