--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -8,7 +8,7 @@ h3
     .col-12
       .row
         = render @posts
-= link_to t('.show more'), categories_path
+= link_to t('.show more'), posts_path
 p
 h3
   = t('category.Engineer')
