Add: 新着記事のクラスを付与

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,7 @@
 h1 
   | Posts#index
-.row
-  .col-12
-    .row
-      = render @posts
+.new_arrival
+  .row
+    .col-12
+      .row
+        = render @posts
