--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -7,7 +7,8 @@ h3
   .row
     .col-12
       .row
-        = render @posts
+        - if @posts.present?
+          = render @posts
 = link_to t('.show more'), posts_path
 p
 h3
@@ -16,7 +17,8 @@ h3
   .row
     .col-12
       .row
-        = render @engineer_posts
+        - if @engineer_posts.present?
+          = render @engineer_posts
 = link_to t('.show more'), category_path('Engineer')
 p
 h3
@@ -25,7 +27,8 @@ h3
   .row
     .col-12
       .row
-        = render @writer_posts
+        - if @writer_posts.present?
+          = render @writer_posts
 = link_to t('.show more'), category_path('Writer')
 p
 h3
@@ -34,5 +37,6 @@ h3
   .row
     .col-12
       .row
-        = render @creator_posts
+        - if @creator_posts.present?
+          = render @creator_posts
 = link_to t('.show more'), category_path('MediaCreator')
