--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,7 +1,11 @@
 .box.box-primary
   = simple_form_for @post do |f|
     .box-body 
-      = f.input :body
+      = f.fields_for :post_images do |img|
+        = img.input :image, as: :file
+        = img.input :caption, placeholder: '写っているアイテムの説明や使用感など'
+
+      = f.input :body, placeholder: '推しポイントや今後取り入れたいアイテムなどあれば紹介しよう'
       = f.association :categories, as: :check_boxes
 
     .box-footer
