--- a/app/views/post_categories/_post_category.html.slim
+++ b/app/views/post_categories/_post_category.html.slim
@@ -1,7 +1,7 @@
 .col-sm-12.col-lg-4.mb-3
   div id="post-id-#{post_category.post.id}"
     .card
-      = image_tag '20210226_233834.jpg', class: 'card-img-top', size: '300x200'
+      = image_tag post_category.post.image.url, class: 'card-img-top', size: '300x200'
       ul class='list-inline'
         li class='list-inline-item'
           = post_category.post.user.name
