--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,7 +1,7 @@
 .col-sm-12.col-lg-4.mb-3
   div id="post-id-#{post.id}"
     .card
-      = image_tag post.image.url, class: 'card-img-top', size: '300x200'
+      = image_tag post.post_images.image.url, class: 'card-img-top', size: '300x200'
       ul class='list-inline'
         li class='list-inline-item'
           = post.user.name
