--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,14 +1,12 @@
 .box.box-primary
   = simple_form_for @form, url: posts_path do |f|
     .box-body
-      = f.simple_fields_for :post_images do |image_form|
-        = image_form.input :image, as: :file
-        = image_form.input :caption, placeholder: '写っているアイテムの説明や使用感など'
+      = f.input :image, as: :file
+      = f.input :caption, placeholder: '写っているアイテムの説明や使用感など'
 
       = f.input :body, as: :text, placeholder: '推しポイントや今後取り入れたいアイテムなどあれば紹介しよう'
 
-      = f.simple_fields_for :post_categories do |category_form|
-        = category_form.association :category, as: :check_boxes
+      = f.input :categories, as: :check_boxes, collection: Category.all
 
     .box-footer
     = f.button :submit, '投稿する', class: %w[btn btn-primary]
