--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,6 +1,6 @@
 .box.box-primary
   = simple_form_for @form, url: posts_path do |f|
-    .box-body
+    .form-inputs
       = f.input :image, as: :file
       = f.input :caption, placeholder: '写っているアイテムの説明や使用感など'
 
@@ -8,5 +8,5 @@
 
       = f.input :categories, as: :check_boxes, collection: Category.all, include_hidden: false
 
-    .box-footer
-    = f.button :submit, '投稿する', class: %w[btn btn-primary]
+    .form-actions
+      = f.button :submit, '投稿する', class: %w[btn btn-primary]
