--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag "/docs/5.0/dist/js/bootstrap.bundle.min.js", integrity: "sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl", crossorigin: "anonymous"
   body
     - if logged_in?
       = render 'shared/header'
@@ -14,5 +15,5 @@ html
     = render 'shared/flash_message'
     = yield
 
-
+    = javascript_include_tag "/docs/5.0/dist/js/bootstrap.bundle.min.js", integrity: "sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0", crossorigin: "anonymous"
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
