--- a/app/views/post_categories/_post_category.html.slim
+++ b/app/views/post_categories/_post_category.html.slim
@@ -1,9 +1,10 @@
-.col-sm-12.col-lg-4.mb-3
-  div id="post-id-#{post_category.post.id}"
+div id="post-id-#{post_category.post.id}"
+  .col
     .card
       = image_tag post_category.post.post_images.first.image_url, class: 'card-img-top', size: '300x300'
-      ul class='list-inline'
-        li class='list-inline-item'
-          = post_category.post.user.name
-        li class='list-inline-item'
-          = l post_category.post.created_at, format: :short
+      .card-body
+        ul class='list-inline'
+          li class='list-inline-item'
+            = post_category.post.user.name
+          li class='list-inline-item'
+            = l post_category.post.created_at, format: :short
