--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,9 +1,10 @@
-.col-sm-12.col-lg-4.mb-3
-  div id="post-id-#{post.id}"
+div id="post-id-#{post.id}"
+  .col
     .card
       = image_tag post.post_images.first.image_url, class: 'card-img-top', size: '300x300'
-      ul class='list-inline'
-        li class='list-inline-item'
-          = post.user.name
-        li class='list-inline-item'
-          = l post.created_at, format: :short
+      .card-body
+        ul class='list-inline'
+          li class='list-inline-item'
+            = post.user.name
+          li class='list-inline-item'
+            = l post.created_at, format: :short
