--- a/app/views/posts/_crud_menus.html.slim
+++ b/app/views/posts/_crud_menus.html.slim
@@ -1,7 +1,7 @@
-ul ='crud-menu-btn list-inline float-right'
-  li = "list-inline-item"
+ul class='crud-menu-btn list-inline float-right'
+  li class='list-inline-item'
     = link_to '#', id: "button-edit-#{post.id}" do
       = icon 'fa', 'pen'
-  li = "list-inline-item"
+  li class='list-inline-item'
     = link_to '#', id: "button-delete-#{post.id}" do
       = icon 'fas', 'trash'
