--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -3,6 +3,7 @@ div id="post-id-#{post.id}"
     .card
       = image_tag post.post_images.first.image_url, class: 'card-img-top', size: '300x300'
       .card-body
+        = render 'posts/crud_menus', post: post
         ul class='list-inline'
           li class='list-inline-item'
             = post.user.name
