--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,5 +1,4 @@
 .row.md-6
-  = form_with model: comment, url: [post, comment], local: true do |f|
-    = f.label :body
-    = f.text_area :body, class: 'form-control md-6', id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body)
-    = f.submit t('defaults.post'), class: %w[btn btn-primary]
+  = simple_form_for [:post, comment] do |f|
+    = f.input :body, as: :text, id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body)
+    = f.button :submit, 'defaults.post', class: %w[btn btn-primary]
