Add: コメントフォームの作成

--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,4 @@
 .row.md-6
-  = simple_form_for [:post, comment] do |f|
-    = f.input :body, as: :text, id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body)
+  = simple_form_for model: comment, url: [post, comment] do |f|
+    = f.input :body, as: :text
     = f.button :submit, 'defaults.post', class: %w[btn btn-primary]
