--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -2,9 +2,9 @@
   h1
     | Posts#show
   .row
-    .col-sm-4.col-md-6.col
+    .col-sm-4.col-md-6
       = image_tag @post.post_images.first.image_url, size: '600x400'
-    .col-sm-3.col-md-6.col
+    .col-sm-3.col-md-6
       .card
         .card-body
           ul class='list-inline'
