--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,3 +1,3 @@
-row.col-md-5
-  table id="js-table-comment", class="table"
-    = render 'comments'
+.row.col-md-5
+  table id="js-table-comment" class="table"
+    = render comments
