Add: サンプルの写真とコメントフォームの非Ajax化

--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,5 +1,5 @@
 .col-md-5
-  = form_with model: comment, url: [post, comment] do |f|
+  = form_with model: comment, url: [post, comment], local: true do |f|
     = f.label :body
     = f.text_area :body, class: 'form-control', id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body)
 
