--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,7 +1,8 @@
 div id="post-id-#{post.id}"
   .col
     .card
-      = image_tag post.post_images.first.image_url, class: 'card-img-top', size: '300x300'
+      = link_to post_path(post)
+        = image_tag post.post_images.first.image_url, class: 'card-img-top', size: '300x300'
       .card-body
         = render 'posts/crud_menus', post: post
         ul class='list-inline'
