--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,5 +1,5 @@
 .box.box-primary
-  = simple_form_for @form, url: posts_path do |f|
+  = simple_form_for @form do |f|
     .box-body
       = f.input :images, as: :file, input_html: { multiple: true }
 
