--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,5 +1,8 @@
 .box.box-primary
-  = simple_form_for @form do |f| 
+  = simple_form_for @form do |f|
+    - if @form.errors.any?
+      - @form.errors.full_messages.each do |msg|
+        = msg
     .box-body
       = f.input :images, as: :file, input_html: { multiple: true }, accept: 'image/*'
 
