Add: 投稿のタイプを選択できるようにフォームに追加

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,6 +5,8 @@
 
       = f.input :body, as: :text
 
+      = f.input :type
+
       = f.input :category_ids, as: :check_boxes, collection: Category.all, include_hidden: false
 
     .box-footer
