Add: enum_helpを導入したためフォーム部分に適用

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,7 +5,7 @@
 
       = f.input :body, as: :text
 
-      = f.select :area, Post.areas.keys
+      = f.select :area, Post.areas_i18n.invert
 
       = f.input :category_ids, as: :check_boxes, collection: Category.all, include_hidden: false
 
