Add: 編集画面でもareaカラムを追加

--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -12,6 +12,8 @@
 
         = f.input :body, as: :text
 
+        = f.select :area, Post.areas_i18n.invert
+
         = f.input :category_ids, as: :check_boxes, collection: Category.all, include_hidden: false
 
       .box-footer
