--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -12,7 +12,7 @@
 
         = f.input :body, as: :text
 
-        = f.select :area, Post.areas_i18n.invert
+        = f.input :area, as: :select, collection: Post.areas_i18n.invert
 
         = f.input :category_ids, as: :check_boxes, collection: Category.all, include_hidden: false
 
