--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -17,6 +17,11 @@
               = l @post.created_at, format: :short
             li class='list-inline-item'
               = render 'posts/crud_menus', post: @post if current_user.present? && current_user.own?(@post)
+            li class='list-inline-item'
+              - if already_liked?(@post)
+                = いいね済み
+              - else 
+                = いいねしてない
     
     = render 'comments/form', { post: @post, comment: @comment }
     p
