Fix: いいねの判断メソッドを直感的でわかりやすいように修正

--- a/app/views/likes/_like.html.slim
+++ b/app/views/likes/_like.html.slim
@@ -1,4 +1,4 @@
-- if current_user&.liked_by?(post)
+- if current_user&.liked?(post)
   = link_to like_path(post), method: :delete, id: "button-like-#{post.id}" do
     i class="fas fa-heart"
 - else 
