Fix: データベースにアクセスするのを省略するためにメソッドを変更

--- a/app/views/posts/likes.html.slim
+++ b/app/views/posts/likes.html.slim
@@ -5,5 +5,5 @@
   p
   .new_arrival
     .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
-      - if @like_posts.exists?
+      - if @like_posts.present?
         = render @like_posts
