--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -18,7 +18,9 @@
             li class='list-inline-item'
               = render 'posts/crud_menus', post: @post if current_user&.own?(@post)
             li class='list-inline-item'
-              = render 'likes/like', post: @post unless current_user&.own?(@post)
+              - unless current_user&.own?(@post)
+                = render 'likes/like', post: @post
+                = render 'bookmarks/bookmark', post: @post
     
     = render 'comments/form', { post: @post, comment: @comment }
     p
