--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -5,6 +5,8 @@ p
     .col-md-2
       = current_user.name
     .col-md-2
+      = link_to 'マイページ', user_path(current_user.id)
+    .col-md-2
       = link_to '新規投稿', new_post_path
     .col-md-2
       = link_to t('defaults.logout'), logout_path, method: :delete
