Add: 該当する投稿がない場合の記載を追加

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -7,3 +7,5 @@
     .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
       - if @posts.present?
         = render @posts
+      - else
+        = '投稿がありません'
