--- a/app/views/posts/bookmarks.html.slim
+++ b/app/views/posts/bookmarks.html.slim
@@ -7,3 +7,5 @@
     .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
       - if @bookmark_posts.present?
         = render @bookmark_posts
+      - else
+        = 'ブックマークした投稿がありません'
