Fix: コメントにユーザーアイコンが表示されるように修正

--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,6 +1,6 @@
 tr id="comment-#{comment.id}"
   td style="width: 60px"
-    = image_tag "sample.jpg", class: 'rounded-circle', size: '50x50'
+    = image_tag comment.user.image_url, class: 'rounded-circle', size: '50x50'
   td 
     h3 class="small"
       = comment.user.name 
