--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -6,6 +6,8 @@ div id="post-id-#{post.id}"
       .card-body
         ul class='list-inline'
           li class='list-inline-item'
+            = image_tag post.user.image_url, class: 'rounded-circle', size: '25x25'
+          li class='list-inline-item'
             = post.user.name
           li class='list-inline-item'
             = l post.created_at, format: :short
