--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -9,6 +9,6 @@ p
     .col-md-2
       = link_to '新規投稿', new_post_path
     .col-md-2
-      = link_to 'プロフィール編集', edit_profile_path(current_user.id)
+      = link_to 'プロフィール編集', edit_profile_path
     .col-md-2
       = link_to t('defaults.logout'), logout_path, method: :delete
