--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -6,7 +6,7 @@
       = f.input :image, as: :file
       = f.hidden_field :image_cache
       .mt-3.mb-3
-        = image_tag @user.image.url(:thumb),
+        = image_tag @user.image.url,
                     class: 'rounded-circle',
                     id: 'preview',
                     size: '100x100'
