Add: アイコンを押すとそのユーザーのマイページへ遷移できるためにリンクを設置

--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,6 +1,7 @@
 tr id="comment-#{comment.id}"
   td style="width: 60px"
-    = image_tag comment.user.image_url, class: 'rounded-circle', size: '50x50'
+    = link_to user_path(comment.user) do
+      = image_tag comment.user.image_url, class: 'rounded-circle', size: '50x50'
   td 
     h3 class="small"
       = comment.user.name 
