Add: 表示しているユーザーの情報を判別するためにidを付与

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,12 +1,17 @@
 = content_for :title, t('.title')
 
-= image_tag @user.image, class: 'rounded-circle', size: '100x100'
-= @user.name
-- if @user.description.present?
-  = @user.description
+.container
+  p
+  div id="user-id-#{@user.id}"
+    .col
+      = image_tag @user.image.url, class: 'rounded-circle', size: '100x100'
+      = @user.name
+      p
+      - if @user.description.present?
+        = @user.description
 
-.row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
-  - if @posts.present?
-    = render @posts
-  - else
-    = '投稿がありません'
+  .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
+    - if @posts.present?
+      = render @posts
+    - else
+      = '投稿がありません'
