--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -15,7 +15,7 @@ tr id="comment-#{comment.id}"
       button class="btn btn-success js-button-comment-update" data-comment-id="#{comment.id}"
         = '更新'
 
-  - if current_user&.own?(comment)
+  /- if current_user&.own?(comment)
     td class="action"
       ul class="list-inline justify-content-center" style="float: right;"
         li class="list-inline-item"
