--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,8 +9,8 @@
       p
       - if @user.description.present?
         = @user.description
-    .row
-      - if current_user == @user
+    - if current_user == @user
+      div id="user-link-id-#{@user.id}"
         .col-md-6
           = link_to 'いいねした投稿', likes_posts_path
         .col-md-6
