--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,10 @@ html
     = stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css", rel: "stylesheet", integrity: "sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl", crossorigin: "anonymous"
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js", integrity: "sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0", crossorigin: "anonymous"
+  
+    meta property="og:site_name" content="Buildesk"
+    meta name="twitter:card" content="summary_large_image"
+    = yeild(:ogp)
   body
     - if logged_in?
       = render 'shared/header'
