--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,3 +1,10 @@
+= content_for :ogp
+  meta property="og:type" content="website"
+  meta property="og:url" content="#{request.url}"
+  meta property="og:title" content="快適なデスク環境をビルドしよう｜Buildesk"
+  meta property="og:description" content="Buildesk（ビルデスク）はデスク環境に特化した写真投稿サービスです。こだわりを持つリモートワーカーのデスクを参考にして、生産性アップにつなげよう。"
+  meta property="og:image" content="#{image_url('app_ogp.png')}"
+
 .container
   h1
     | Top#index
