--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,4 +1,11 @@
 = content_for :title, t('.title') 
+= content_for :ogp
+  meta property="og:type" content="post"
+  meta property="og:url" content="#{request.url}"
+  meta property="og:title" content="#{@post.user.name}さんのデスク環境｜Buildesk（ビルデスク）"
+  meta property="og:description" content="#{@post.body}"
+  meta property="og:image" content="#{@post.post_images.first.image_url}"
+
 .container
   h1
     | Posts#show
