--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,8 +1,6 @@
 doctype html
 html
   head
-    title
-      = page_title(yield(:title))
     = csrf_meta_tags
     = csp_meta_tag
 
@@ -11,9 +9,7 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js", integrity: "sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0", crossorigin: "anonymous"
   
-    meta property="og:site_name" content="Buildesk（ビルデスク）"
-    meta name="twitter:card" content="summary_large_image"
-    = yield(:ogp)
+    = display_meta_tags(default_meta_tags)
   body
     - if logged_in?
       = render 'shared/header'
