--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,10 +1,4 @@
-= content_for :title, t('.title') 
-= content_for :ogp
-  meta property="og:type" content="post"
-  meta property="og:url" content="#{request.url}"
-  meta property="og:title" content="#{@post.user.name}さんのデスク環境｜#{l @post.created_at, format: :simple}｜Buildesk（ビルデスク）"
-  meta property="og:description" content="#{@post.body}"
-  meta property="og:image" content="#{@post.post_images.first.image_url}"
+- set_meta_tags title: t('.title'), og: { title: t('.og_title', name: @post.user.name, data: l(@post.created_at, format: :simple)), description: @post.body, image: @post.post_images.first.image_url }
 
 .container
   h1
