--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,4 +1,4 @@
-= content_for :title, t('.title', user: @user.name)
+- set_meta_tags title: t('.title', user: @user.name), og: { title: t('.og_title', user: @user.name) }
 
 .container
   p
