--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,4 +1,5 @@
-= content_for :title, t('.title')
+- set_meta_tags title: t('.title'), og: { title: t('.og_title')}
+
 .container
   h1 
     | Posts#index
