--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: t('.title'), og: { title: t('.og_title')}
+- set_meta_tags title: t('.title'), og: { og_title: t('.og_title')}
 
 .container
   h1 
