--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags og: { title: t('.og_title'), description: t('.og_description') }
+- set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
 .container
   h1
