Revert "Add: シェア機能の追加"

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,5 +1,4 @@
-- set_meta_tags title: t('.title'), og: { og_title: t('.og_title')}
-
+= content_for :title, t('.title')
 .container
   h1 
     | Posts#index
