Add: 管理者用ページのレイアウトファイルを共通部分のファイルを追加

--- a/app/views/admin/layouts/application.html.slim
+++ b/app/views/admin/layouts/application.html.slim
@@ -4,10 +4,17 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
-    = stylesheet_pack_tag 'admin', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'admin', media: 'all'
     = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
   
     = display_meta_tags(default_meta_tags)
-  body
-    = render 'shared/flash_message'
-    = yield
+  body.hold-transition.sidebar-mini.layout-fixed
+  .wrapper
+    = render 'admin/shared/header'
+    = render 'admin/shared/sidebar'
+
+    .content-wrapper 
+      = render 'shared/flash_message'
+      = yield
+
+    = render 'admin/shared/footer'
