Fix: ダークテーマ適用に伴った色味の修正

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -9,5 +9,5 @@ nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
   #navMenu.navbar-menu
     .navbar-end
       .navbar-item
-        = link_to t('defaults.login'), login_path, class: 'button is-rounded has-text-black has-text-weight-semibold', data: { turbolinks: false }
+        = link_to t('defaults.login'), login_path, class: 'button is-rounded is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
       
