--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,21 +1,22 @@
 nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
-  .navbar-brand
-    .navbar-item
-      = link_to root_path, data: { turbolinks: false }
-        = image_tag 'buildesk_logo.png', size: '112x28'
-    a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
-      span[aria-hidden="true"]
-      span[aria-hidden="true"]
-      span[aria-hidden="true"] 
-  #navMenu.navbar-menu
-    .navbar-end
-      = link_to '新規投稿', new_post_path, class: 'navbar-item', data: { turbolinks: false }
-      .navbar-item.has-dropdown.is-hoverable
-        a.navbar-link
-          = current_user.name
-        .navbar-dropdown.is-right
-          = link_to 'マイページ', user_path(current_user.id), class: 'navbar-item', data: { turbolinks: false }
-          = link_to 'プロフィール編集', edit_profile_path, class: 'navbar-item', data: { turbolinks: false }
-          hr.navbar-divider
-          = link_to t('defaults.logout'), logout_path, class: 'navbar-item', method: :delete
+  .container
+    .navbar-brand
+      .navbar-item
+        = link_to root_path, data: { turbolinks: false }
+          = image_tag 'buildesk_logo.png', size: '112x28'
+      a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
+        span[aria-hidden="true"]
+        span[aria-hidden="true"]
+        span[aria-hidden="true"] 
+    #navMenu.navbar-menu
+      .navbar-end
+        = link_to '新規投稿', new_post_path, class: 'navbar-item', data: { turbolinks: false }
+        .navbar-item.has-dropdown.is-hoverable
+          a.navbar-link
+            = current_user.name
+          .navbar-dropdown.is-right
+            = link_to 'マイページ', user_path(current_user.id), class: 'navbar-item', data: { turbolinks: false }
+            = link_to 'プロフィール編集', edit_profile_path, class: 'navbar-item', data: { turbolinks: false }
+            hr.navbar-divider
+            = link_to t('defaults.logout'), logout_path, class: 'navbar-item', method: :delete
       
