Add: スマホ時にヘッダーが表示されないように設定

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,4 +1,4 @@
-nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
+nav.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
   .container
     .navbar-brand
       .navbar-item
