--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -4,7 +4,7 @@
   h1 
     | Posts#index
   p
-  .new_arrival
+  #new_arrival
     .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
       - if @posts.present?
         = render @posts
