Add: hero背景部分の画像を追加

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,17 +1,18 @@
 - set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
-section.hero.is-dark.is-medium
+section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(#{asset_path('vadim-sherbakov-RcdV8rnXSeE-unsplash.jpg')})"]
   .hero-body
     .container
       p.title.has-text-weight-bold
         |  Buildesk 
-      p.subtitle
+      p.subtitle.has-text-light
         |  リモートワークをハックしよう
 .container
   section.section#new_arrival
     h1.title.is-3.has-text-weight-bold
       = t('.New Arrival')
-    - if @posts.present?
-      = render @posts
-      p.has-text-right
-        = link_to t('.show more'), posts_path
+    .tile.is-ancestor
+      - if @posts.present?
+        = render @posts
+    p.has-text-right
+      = link_to t('.show more'), posts_path
