Fix: ファイルに関するコメントを追加

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// レイアウトファイル
+// yarnで導入
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 
