Fix: スマホでもヘッダーを固定表示の設定

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,4 +1,5 @@
-nav.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
+html.has-navbar-fixed-top
+header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
   .container
     .navbar-brand
       .navbar-item
